# LCVRP-Genetic-Algorithm

./: CMakeLists.txt  README.md
projekt/: CEvaluator.cpp  CEvaluator.h  CGeneticAlgorithm.cpp  CGeneticAlgorithm.h  CIndividual.cpp  CIndividual.h  CMySmartPointer.h  CRefCounter.h  Constants.h  main.cpp
